--- a/requirements-biopy.txt
+++ b/requirements-biopy.txt
@@ -1,7 +1,12 @@
+-r requirements-base.txt
 scanpy
-gseapy
+muon
 scvelo
-velocyto
+liana[common]
+squidpy[napari]
+gseapy
+#velocyto
 htseq
 multiqc
 magic-impute
+biopython
