--- a/python/biopy/pyproject.toml
+++ b/python/biopy/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "muon (>=0.1.7,<0.2.0)",
     "pydeseq2 (>=0.5.0,<0.6.0)",
     "pyscenic (>=0.12.1,<0.13.0)",
+    "statannotations (>=0.7.2,<0.8.0)",
+    "anndata2ri (>=1.3.2,<2.0.0)",
 ]
 
 [tool.poetry]
