--- a/python/sqenv/pyproject.toml
+++ b/python/sqenv/pyproject.toml
@@ -2,16 +2,12 @@
 name = "sqenv"
 requires-python = ">=3.12,<3.13"
 dependencies = [
-    "scanpy[leiden] (>=1.11.0,<2.0.0)",
-    "fastcluster (>=1.2.6,<2.0.0)",
+    "scanpy[leiden] (>=1.11.1,<2.0.0)",
+    "fastcluster (>=1.3.0,<2.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
-    "gseapy (>=1.1.7,<2.0.0)",
-    "xarray (<2024.10.0)",
-    "dask[dataframe] (==2024.11.2)",
-    "spatialdata (>=0.2.5)",
-    "ome-zarr (>=0.8.4)",
-    "squidpy (==1.6.2)",
+    "gseapy (>=1.1.8,<2.0.0)",
+    "squidpy (>=1.6.5,<2.0.0)",
 ]
 
 [tool.poetry]
